# knot-rl

./: .clang-format  .gitignore  Makefile  README.md  compile_commands.json  pyproject.toml
include/: arena.h  basic_knots.h  deserializer.h  hashing.h  inference.h  knot.h  link.h  node.h  replay_buffer.h  training.h  visit.h
knot_data/: another_knot.json  cute_knot.json  dumb_knot.json  huge_knot.json  large_knot.json  smol_knot.json  sparse_knot.json  ugly_knot.json  weird_knot.json
knot_data/big_data/: knot0.json  knot1.json  knot10.json  knot100.json  knot1000.json  knot1001.json  knot1002.json  knot1003.json  knot1004.json  knot1005.json  knot1006.json  knot1007.json  knot1008.json  knot1009.json  knot101.json  knot1010.json  knot1011.json  knot1012.json  knot1013.json  knot1014.json  knot1015.json  knot1016.json  knot1017.json  knot1018.json  knot1019.json  knot102.json  knot1020.json  knot1021.json  knot1022.json  knot1023.json  knot1024.json  knot1025.json  knot1026.json  knot1027.json  knot1028.json  knot1029.json  knot103.json  knot1030.json  knot1031.json  knot1032.json  (+7560 more)
src/: __init__.py  data.py  gnn.py  greedy.cpp  inference.cpp  knot.cpp  knot_generation.py  link.cpp  main.cpp  main.d  mcts.cpp  training.py  unknot_generation.cpp
