[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knotrl"
version = "0.1.0"
description = "Knot RL"
readme = "README.md"
authors = [
  {name = "Amir Kolic", email = "kolic@mit.com"},
  {name = "Danil Sibgatullin", email = "danils@mit.com"}
]
license = {text = "MIT"}

dependencies = [
    "numpy",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]  
include = ["*"]  
namespaces = false # Optional: Set to true only if using namespace packages